--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
       <li><a class="nav-link" href="{{ url_for('zones') }}">Зоны доставки</a></li>
       <li><a class="nav-link" href="{{ url_for('users') }}">Пользователи</a></li>
       <li><a class="nav-link" href="{{ url_for('stats') }}">Статистика</a></li>
+      <li><a class="nav-link" href="{{ url_for('reports') }}">Отчёты</a></li>
       {% endif %}
     </ul>
     <div class="mt-auto">
@@ -63,6 +64,7 @@
         <li><a class="nav-link" href="{{ url_for('zones') }}">Зоны доставки</a></li>
         <li><a class="nav-link" href="{{ url_for('users') }}">Пользователи</a></li>
         <li><a class="nav-link" href="{{ url_for('stats') }}">Статистика</a></li>
+        <li><a class="nav-link" href="{{ url_for('reports') }}">Отчёты</a></li>
         {% endif %}
         <li class="mt-3"><a class="btn btn-sm btn-outline-secondary w-100" href="{{ url_for('logout') }}">Выход</a></li>
       </ul>
