--- a/templates/courier.html
+++ b/templates/courier.html
@@ -36,6 +36,7 @@
             <td class="actions" data-label="Действия">
               {% if o.status == 'Выдано на доставку' %}
               <button class="btn btn-sm btn-success deliver-btn">Доставлен</button>
+              <button class="btn btn-sm btn-danger problem-btn ms-1">Проблема</button>
               {% endif %}
             </td>
           </tr>
