--- a/templates/orders.html
+++ b/templates/orders.html
@@ -2,13 +2,13 @@
 {% block content %}
 <h2>Заказы</h2>
 {% if current_user.role == 'admin' %}
-<a class="btn btn-sm btn-success mb-3" href="{{ url_for('import_upload') }}">Импорт заказов</a>
+<a class="btn btn-sm btn-success mb-3 w-100" href="{{ url_for('import_upload') }}">Импорт заказов</a>
 {% endif %}
 <input
   type="text"
   id="orderSearch"
   placeholder="Поиск по заказам..."
-  class="form-control mb-3"
+  class="form-control mb-3 w-100"
 />
 {% with messages = get_flashed_messages(with_categories=true) %}
   {% if messages %}
