--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="row justify-content-center">
-  <div class="col-11 col-sm-8 col-md-6 col-lg-4 card">
+  <div class="col-11 col-sm-8 col-md-6 col-lg-4 card login-card">
     <h2>Вход</h2>
     <form method="post">
       <div class="mb-3">
@@ -12,7 +12,7 @@
         <label class="form-label">Пароль</label>
         <input type="password" class="form-control" name="password">
       </div>
-      <button type="submit" class="btn btn-primary">Войти</button>
+      <button type="submit" class="btn btn-primary w-100">Войти</button>
     </form>
   </div>
 </div>
