Add backup script and disable polygon interaction

--- a/templates/set_coords.html
+++ b/templates/set_coords.html
@@ -24,7 +24,7 @@ L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 var group = L.featureGroup().addTo(map);
 zones.forEach(function(z){
     if(z.polygon && z.polygon.length){
-        var poly = L.polygon(z.polygon.map(function(p){return [p[1], p[0]];}), {color:z.color});
+        var poly = L.polygon(z.polygon.map(function(p){return [p[1], p[0]];}), {color:z.color, interactive:false});
         poly.bindPopup(z.name);
         group.addLayer(poly);
     }
