--- a/templates/import_mapping.html
+++ b/templates/import_mapping.html
@@ -6,6 +6,10 @@
     <input class="form-check-input" type="checkbox" id="headerCheck" name="header" checked>
     <label class="form-check-label" for="headerCheck">Первая строка содержит заголовки</label>
   </div>
+  <div class="form-check mb-3">
+    <input class="form-check-input" type="checkbox" id="clearCheck" name="clear" value="1">
+    <label class="form-check-label" for="clearCheck">Очистить старые данные</label>
+  </div>
   <table class="table table-sm">
     <thead>
       <tr>
