--- a/templates/edit_zone.html
+++ b/templates/edit_zone.html
@@ -28,7 +28,7 @@
 <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
 <script>
 var existing = JSON.parse({{ zone.polygon_json|tojson|safe }});
-var workArea = {{ workarea.geojson|tojson|safe if workarea else 'null' }};
+var workArea = {{ workarea|tojson if workarea else 'null' }};
 var workColor = {{ ('"' + workarea.color + '"') if workarea else '"#777777"' }};
 var colorInput = document.getElementById('colorInput');
 var map = L.map('map').setView([42.8746, 74.6122], 12);
@@ -48,9 +48,11 @@ existingZones.forEach(function(z){
 var drawnItems = new L.FeatureGroup();
 map.addLayer(drawnItems);
 
-if (workArea && workArea.geometry && workArea.geometry.coordinates.length) {
-    var wa = L.polygon(workArea.geometry.coordinates[0].map(function(p){ return [p[1], p[0]];}), {color: workColor, interactive:false, fill:false});
-    wa.addTo(map);
+if (workArea) {
+    var waLayer = L.geoJSON({ type: 'Feature', geometry: workArea }, {
+        style: { color: workColor, weight: 2, fillOpacity: 0.05, dashArray: '5 5' }
+    }).addTo(map);
+    map.fitBounds(waLayer.getBounds());
 }
 
 if (existing.length) {
