--- a/templates/workarea/index.html
+++ b/templates/workarea/index.html
@@ -14,35 +14,31 @@
 {% block scripts %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-<link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
-<script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
+<link rel="stylesheet" href="https://unpkg.com/leaflet.pm/dist/leaflet.pm.css" />
+<script src="https://unpkg.com/leaflet.pm/dist/leaflet.pm.min.js"></script>
 <script>
-var existing = JSON.parse({{ area.geojson|tojson|safe }});
+var work = {{ workarea|tojson if workarea else 'null' }};
 var colorInput = document.getElementById('colorInput');
 var map = L.map('map').setView([42.8746, 74.6122], 12);
 L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {maxZoom:19, attribution:'&copy; OpenStreetMap contributors'}).addTo(map);
-var drawnItems = new L.FeatureGroup().addTo(map);
-if (existing && existing.geometry && existing.geometry.coordinates.length){
-  var coords = existing.geometry.coordinates[0].map(function(p){ return [p[1], p[0]]; });
-  var poly = L.polygon(coords, {color: colorInput.value});
-  drawnItems.addLayer(poly);
-  map.fitBounds(poly.getBounds());
+map.pm.addControls({ drawCircle:false, drawMarker:false, drawPolyline:false, drawCircleMarker:false, drawRectangle:false });
+var layer = null;
+if (work) {
+  const geo = L.geoJSON({ type: 'Feature', geometry: work }, { color: colorInput.value }).addTo(map);
+  geo.eachLayer(function(l){ layer = l; l.pm.enable(); });
+  map.fitBounds(geo.getBounds());
 }
-var drawControl = new L.Control.Draw({edit:{featureGroup: drawnItems, remove:true}, draw:{polygon:true, marker:false, polyline:false, rectangle:false, circle:false, circlemarker:false}});
-map.addControl(drawControl);
 function updateGeo(){
   var gj = null;
-  drawnItems.eachLayer(function(layer){
-    if(layer instanceof L.Polygon){
-      layer.setStyle({color: colorInput.value});
-      gj = layer.toGeoJSON();
-    }
-  });
+  if(layer){
+    layer.setStyle({color: colorInput.value});
+    gj = layer.toGeoJSON().geometry;
+  }
   document.getElementById('geojsonInput').value = JSON.stringify(gj);
 }
-map.on(L.Draw.Event.CREATED, function(e){ drawnItems.clearLayers(); drawnItems.addLayer(e.layer); updateGeo(); });
-map.on(L.Draw.Event.EDITED, updateGeo);
-map.on(L.Draw.Event.DELETED, updateGeo);
+map.on('pm:create', function(e){ if(layer) map.removeLayer(layer); layer = e.layer; layer.pm.enable(); updateGeo(); });
+map.on('pm:update', updateGeo);
+map.on('pm:remove', function(){ layer = null; updateGeo(); });
 colorInput.addEventListener('change', updateGeo);
 updateGeo();
 </script>
